// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow component renders correctly with "left" direction prop 1`] = `
<svg
  class="rotate-180"
  data-testid="arrow-test-id"
  fill="currentColor"
  height="16"
  viewBox="0 0 37 16"
  width="37"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
  />
</svg>
`;

exports[`Arrow component renders correctly with "right" direction prop 1`] = `
<svg
  class=""
  data-testid="arrow-test-id"
  fill="currentColor"
  height="16"
  viewBox="0 0 37 16"
  width="37"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M36.707 8.707a1 1 0 0 0 0-1.414L30.343.929a1 1 0 1 0-1.414 1.414L34.586 8l-5.657 5.657a1 1 0 0 0 1.414 1.414zM36 7H0v2h36z"
  />
</svg>
`;
